# alphaDrone-Software

./: README.md
CompanionComputer/: offboard_test10.py  receiveAndSend2Pi_DEBIAN_ver2.py
ai/: CMakeLists.txt
ai/cmake/: nvblox.cmake  openvins.cmake  realsense.cmake
ai/include/: buffer.h  imu.h  realsenseloader.h
ai/src/: main.cc  realsenseloader.cc
